@@ -66,7 +66,7 @@ function pretty_rewrite_buffer($buffer)
 			{
 				if (!isset($url['replacement']))
 					$url['replacement'] = $url['url'];
-				$url['replacement'] = str_replace(chr(18), '\'', $url['replacement']);
+				$url['replacement'] = str_replace("\x12", '\'', $url['replacement']);
 				$url['replacement'] = preg_replace(array('~\"~', '~;+|=;~', '~\?;~', '~\?$|;$|=$~'), array('%22', ';', '?', ''), $url['replacement']);
 				$context['pretty']['cached_urls'][$url_id] = $url['replacement'];
 				if (strlen($url_id) < 256 && strlen($url['replacement']) < 256)
@@ -89,7 +89,7 @@ function pretty_rewrite_buffer($buffer)
 
 	//	Restore the script tags
 	if ($context['pretty']['scriptID'] > 0)
-		$buffer = preg_replace_callback('~' . chr(20) . '([0-9]+)' . chr(20) . '~', 'pretty_scripts_restore', $buffer);
+		$buffer = preg_replace_callback("~\x14([0-9]+)\x14~", 'pretty_scripts_restore', $buffer);
 
 	// Return the changed buffer.
 	return $buffer;
@@ -102,7 +102,7 @@ function pretty_scripts_remove($match)
 
 	$context['pretty']['scriptID']++;
 	$context['pretty']['scripts'][$context['pretty']['scriptID']] = $match[0];
-	return chr(20) . $context['pretty']['scriptID'] . chr(20);
+	return "\x14" . $context['pretty']['scriptID'] . "\x14";
 }
 
 //	A callback function to replace the buffer's URLs with their cached URLs
@@ -238,8 +238,8 @@ function pretty_urls_topic_filter($urls)
 					$pretty_text = 't' . $row['ID_TOPIC'];
 				//	No duplicates and no numerical URLs - that would just confuse everyone!
 				if (in_array($pretty_text, $new_urls) || is_numeric($pretty_text))
-					//	Add suffix '-tID_TOPIC' to the pretty url
-					$pretty_text = substr($pretty_text, 0, 70) . '-t' . $row['ID_TOPIC'];
+					//	Add suffix '-ID_TOPIC' to the pretty url
+					$pretty_text = substr($pretty_text, 0, 70) . '-' . $row['ID_TOPIC'];
 				$query_check[] = '\'' . addslashes($pretty_text) . '\'';
 				$new_urls[$row['ID_TOPIC']] = $pretty_text;
 			}
@@ -259,7 +259,7 @@ function pretty_urls_topic_filter($urls)
 				$pretty_text = $new_urls[$row['ID_TOPIC']];
 				//	Check if the new URL is already in use
 				if (in_array($pretty_text, $existing_urls))
-					$pretty_text = substr($pretty_text, 0, 70) . '-t' . $row['ID_TOPIC'];
+					$pretty_text = substr($pretty_text, 0, 70) . '-' . $row['ID_TOPIC'];
 				$add_new[] = '(' . $row['ID_TOPIC'] . ', "' . addslashes($pretty_text) . '")';
 				//	Add to the original array of topic URLs
 				$topicData[$row['ID_TOPIC']] = array(
